# MWAC_HiRes

./: .gitignore  CMakeLists.txt  README.md
cuda/: cuda_hires.cu  cuda_hires.h
main/: CMakeLists.txt  mwac_hires.c
test/: 0437.txt  bandpass.txt  make_auxfiles.py  part_test.sh  test_cufft.c  test_mkfile.c
